[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scenes/PlayableCharacters/CharacterBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/CemeteryStage/Skeleton/skeleton-rise-6.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/CemeteryStage/Skeleton/skeleton-3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/CemeteryStage/Skeleton/skeleton-rise-2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/CemeteryStage/Skeleton/skeleton-2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/CemeteryStage/Skeleton/skeleton-rise-3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/CemeteryStage/Skeleton/skeleton-5.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/CemeteryStage/Skeleton/skeleton-rise-1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/CemeteryStage/Skeleton/skeleton-rise-5.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/CemeteryStage/Skeleton/skeleton-1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/CemeteryStage/Skeleton/skeleton-4.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/CemeteryStage/Skeleton/skeleton-rise-4.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/CemeteryStage/Skeleton/skeleton-8.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/CemeteryStage/Skeleton/skeleton-6.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/CemeteryStage/Skeleton/skeleton-7.png" type="Texture" id=15]
[ext_resource path="res://Scenes/Enemies/DeathAnimation.tscn" type="PackedScene" id=16]
[ext_resource path="res://Script/Enemies/Skeleton.gd" type="Script" id=17]
[ext_resource path="res://Script/Enemies/SkeletonStateMachine.gd" type="Script" id=18]




[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.24263, 19.4542 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 23.6051, 6.54586 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 11.3983

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 13 ) ],
"loop": true,
"name": "walk",
"speed": 7.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 2 ) ],
"loop": false,
"name": "rise",
"speed": 6.0
} ]

[sub_resource type="Animation" id=5]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 2.5, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Skeleton" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 10
script = ExtResource( 17 )

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 0, -19.3625 )
shape = SubResource( 2 )
disabled = true

[node name="RiseTrigger" type="Area2D" parent="." index="1"]
position = Vector2( 0, -6.17354 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RiseTrigger" index="0"]
shape = SubResource( 4 )

[node name="CollideWithPlayer" type="Area2D" parent="." index="2"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollideWithPlayer" index="0"]
position = Vector2( 0, -20.2043 )
shape = SubResource( 3 )
disabled = true

[node name="Body" parent="." index="3"]
position = Vector2( 0, -25.9569 )

[node name="Sprite" parent="Body" index="0"]
frames = SubResource( 1 )
animation = "rise"

[node name="DeathAnimation" parent="Body" index="1" instance=ExtResource( 16 )]
visible = false

[node name="AnimationPlayer" parent="." index="4"]
anims/hurt = SubResource( 5 )

[node name="StateMachine" parent="." index="5"]
script = ExtResource( 18 )
[connection signal="body_entered" from="RiseTrigger" to="." method="_on_RiseTrigger_body_entered" flags=6]
[connection signal="body_entered" from="CollideWithPlayer" to="." method="_on_CollideWithPlayer_body_entered"]
[connection signal="animation_finished" from="Body/Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Body/Sprite" to="." method="_on_Sprite_frame_changed"]
